--- a/javascript/style1.css
+++ b/javascript/style1.css
@@ -30,9 +30,15 @@ div.main {
   h1 {
     font-size: 20px;
   }
+  div.container {
+    width: 50%;
+  }
 }
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 35px;
+  }
+  div.container {
+    width: 30%;
   }
 }
